--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Your galeries
 		<iframe class="slideshow-iframe" src="{{ site.github.url }}{{ slide.url }}"></iframe>
 		<div class="sub-slideshow">
 			<h1>{{ slide.title }}</h1>
-			<a class="edit" href="{{site.github.repository_url}}/blob/gh-pages/{{slide.path}}">Edit</a>
+			<a class="edit" href="{{site.github.repository_url}}/edit/gh-pages/{{slide.path}}">Edit</a>
 			<a class="view" href="{{ site.github.url }}{{ slide.url }}">View</a>
 			<a class="embed" href="#">Embed</a>
 			<div class="embed-pane hidden">
