little UX fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@ title: Your galeries
 			<a class="embed" href="#">Embed</a>
 			<div class="embed-pane hidden">
 				<p>To embed this slide in a website, add this code to your page:</p>
-				<input value='&lt;iframe src="{{ site.github.url }}{{ slide.url }}" width="100%" height="100%" style="border: none;"&gt;&lt;/iframe&gt;'></input>
+				<input class="embed-input" 
+					value='&lt;iframe src="{{ site.github.url }}{{ slide.url }}" width="100%" height="100%" style="border: none;"&gt;&lt;/iframe&gt;'
+					spellcheck="false"></input>
 			</div>
 		</div>
 	</article>
